--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -89,6 +89,10 @@ section.snippet p {
 	background-color: #ededbf;
 }
 
+.sunbearer {
+	background-color: #71c7ac;
+}
+
 details.trigger.warning {
 	background-color: #585858;
 	color: white; 
