katzenjammer background color

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -93,6 +93,11 @@ section.snippet p {
 	background-color: #71c7ac;
 }
 
+.katz {
+	background-color: #c75975;
+	color: #F5F3E2;
+}
+
 details.trigger.warning {
 	background-color: #585858;
 	color: white; 
