girl who fell beneath the sea background color

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -102,6 +102,10 @@ section.snippet p {
 	background-color: #D9A5EF;
 }
 
+.girl {
+	background-color: #E89B7C;
+}
+
 details.trigger.warning {
 	background-color: #585858;
 	color: white; 
