--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -106,6 +106,11 @@ section.snippet p {
 	background-color: #E89B7C;
 }
 
+.rot {
+	background-color: #147072;
+	color: white;
+}
+
 details.trigger.warning {
 	background-color: #585858;
 	color: white; 
