font color mix-up
Fixed a mix-up where I accidentally replaced the font color for all systems red instead of the font color for the sacrifice

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -139,12 +139,12 @@ section.snippet p {
 
 .red {
 	background-color: #CA756D; 
-	color: #516D60;
+	color: white;
 }
 
 .sacrifice {
 	background-color: #C67EB2; 
-	color: 
+	color: #516D60; 
 }
 
 details.trigger.warning {
