New review pages, new images, Assistant to the Villain template
Added new pages for all of my recent books (Assistant to the Villain, In the Hall with the Knife, Delicious Monsters, Mister Magic, and Lessons in Chemistry)

Added images for all of these books

Changed template for Assistant to reflect that book's info --> Review needs to be written

Also switched around Lessons in Chemistry & Mister Magic so they are in the correct order on the archive page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -17,6 +17,12 @@ h1 {
 }
 
 ul {
+	font-family: serif !important;
+	padding-left: 15px;
+	margin-bottom: 0px;
+}
+
+.archive {
 	list-style: none !important; 
 }
 
