She is a Haunting
Created the files & template for She is a Haunting; linked on the archive page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -196,6 +196,11 @@ section.snippet-2 p {
 	color: white; 
 }
 
+.haunting {
+	background-color: #89A857;
+	color: black; 
+}
+
 .knife {
 	background-color: #C6B272;
 	color: black;
