The Last Girls Standing
Added the files & template for the Last Girls Standing; linked on the archive; css taken care of

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -231,6 +231,10 @@ section.snippet-2 p {
 	color: white; 
 }
 
+.standing {
+	background-color: #61A0C2;
+	color: black;
+}
 
 /*Content Warnings -- detail and summary tags*/
 summary {
