What Moves the Dead
Created the files & template for What Moves the Dead; link added and connected to archive; css taken care of

Also added further clarification to the content warnings for She is a Haunting

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -236,6 +236,11 @@ section.snippet-2 p {
 	color: black;
 }
 
+.whatmovesdead {
+	background-color: #9B312C;
+	color: white; 
+}
+
 /*Content Warnings -- detail and summary tags*/
 summary {
 	color: black;
