Finished Jake Livingston
Added all the details to The Taking of Jake Livingston: goodreads link, images, basics, content warnings, review, & CSS

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -212,6 +212,11 @@ section.snippet-2 p {
 	color: black;
 }
 
+.livingston {
+	background-color: #A5CFD6;
+	color: black;
+}
+
 .mistermagic {
 	background-color: #81166C;
 	color: white; 
