I Feed Her to the Beast and the Beast is Me
Added files, picture, & template for I Feed Her to the Beast and the Beast is Me. Added !!!! for things that still need to be added when I finish

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -197,6 +197,11 @@ section.snippet-2 p {
 	color: white; 
 }
 
+.feed {
+	background-color: #4D2158;
+	color: white;
+}
+
 .haunting {
 	background-color: #89A857;
 	color: black; 
